# handle_cli

./: Cargo.toml  LICENSE  README.md  most-common-adjectives-english.csv
src/: dict.rs  encodings.rs  main.rs
