[package]
name = "handle_reattempt"
version = "0.1.0"
authors = ["Henry McIntosh <henry@bluelyon.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10.7", features = ["json"] }
tokio = { version = "0.2", features = ["macros"] }
savefile="0.7"
savefile-derive="0.7"
dotenv = "0.15.0"